force-app/main/default/objects/Opportunity/fields/CHK_temDocumento__c.field-meta.xml
<CustomField>
    <fullName>CHK_temDocumento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>temDocumento</label>
    <type>Checkbox</type>
</CustomField>