force-app/main/default/objects/Opportunity/fields/CUR_Custo_estimado_do_projeto__c.field-meta.xml
<CustomField>
    <fullName>CUR_Custo_estimado_do_projeto__c</fullName>
    <label>Custo estimado do projeto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>