force-app/main/default/objects/Opportunity/fields/DAT_Data_Fim__c.field-meta.xml
<CustomField>
    <fullName>DAT_Data_Fim__c</fullName>
    <label>Data Fim</label>
    <type>Date</type>
</CustomField>