force-app/main/default/objects/Opportunity/fields/FRM_Logotipo__c.field-meta.xml
<CustomField>
    <fullName>FRM_Logotipo__c</fullName>
    <formula>IMAGE(&apos;https://stage4-dev-ed--c.develop.vf.force.com/resource/1706470335000/Stage&apos;, &apos;LightLogo&apos;, 125, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logotipo</label>
    <type>Text</type>
</CustomField>