force-app/main/default/objects/Opportunity/fields/FRM_observation__c.field-meta.xml
<CustomField>
    <fullName>FRM_observation__c</fullName>
    <formula>&apos;Só é permitido anexar o documento de contrato nas oportunidades, certifique-se de que esse é o nome do arquivo.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observação</label>
    <type>Text</type>
</CustomField>