force-app/main/default/objects/Opportunity/fields/FRM_Tempo_estimado_do_projeto__c.field-meta.xml
<CustomField>
    <fullName>FRM_Tempo_estimado_do_projeto__c</fullName>
    <formula>TEXT(DAT_Data_Fim__c - DAT_Data_Inicio__c) + &apos; dias&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo estimado do projeto</label>
    <type>Text</type>
</CustomField>