force-app/main/default/objects/Opportunity/fields/OppSource_SomadePontos__c.field-meta.xml
<CustomField>
    <fullName>OppSource_SomadePontos__c</fullName>
    <label>SomadePontos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>