force-app/main/default/objects/Opportunity/fields/PKL_novoCliente__c.field-meta.xml
<CustomField>
    <fullName>PKL_novoCliente__c</fullName>
    <label>Novo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>