force-app/main/default/objects/Opportunity/fields/Processo_de_aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Processo_de_aprova_o__c</fullName>
    <label>Processo de aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando Formalização</fullName>
                <default>true</default>
                <label>Aguardando Formalização</label>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Concluido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>