force-app/main/default/objects/Opportunity/fields/TXTL_Detalhamento_do_projeto__c.field-meta.xml
<CustomField>
    <fullName>TXTL_Detalhamento_do_projeto__c</fullName>
    <label>Detalhamento do projeto</label>
    <type>TextArea</type>
</CustomField>